# omega

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build32_mingw_nostd.bat  build32_mingw_win32.bat  build_emscripten.sh  build_mingw.bat  build_mingw_nostd.bat  build_mingw_raylib.bat  build_mingw_sdl2.bat  build_mingw_win32.bat  build_sdl2.sh  build_sdl2_nostd.sh  configure.bat  configure.sh  gen_map.bat  gen_map.sh  main.c  omgapp.sln  omgapp.vcxproj  omgapp.vcxproj.filters
assets/: sample.txt  test_map.ldtk
enc_temp_folder/599667befd556144813c124d4050d3/: omega.c
examples/: example1.c
game/: CMakeLists.txt  aamain.c  build_emscripten.sh  game.c  gen_map.bat  gen_map.sh  loader.c  logo.c  main.c  menu.c  omgapp.sln  omgapp.vcxproj  omgapp.vcxproj.filters
game/assets/: map1.ldtk
game/include/: aamain.h  game.h  loader.h  logo.h  menu.h  player.h
include/omega/: api_fmod.h  api_gdip.h  api_libc.h  api_raylib.h  api_sdl2.h  api_sdl2_gfx.h  api_sdl2_image.h  api_sdl2_mixer.h  api_sdl2_ttf.h  api_spng.h  api_static.h  api_win.h  array.h  audio.h  (+61 more)
src/: api_fmod.c  api_gdip.c  api_libc.c  api_raylib.c  api_sdl2.c  api_sdl2_gfx.c  api_sdl2_image.c  api_sdl2_mixer.c  api_sdl2_ttf.c  api_spng.c  api_static.c  api_win.c  array.c  audio.c  audio_emscripten.c  audio_fmod.c  audio_raylib.c  audio_sdl2.c  bmfont.c  clock.c  clock_raylib.c  clock_sdl2.c  clock_win.c  entry.c  font.c  font_raylib.c  font_sdl2.c  image.c  image_omg.c  image_raylib.c  image_sdl2.c  input.c  keyboard.c  ldtk.c  memory.c  memory_raylib.c  memory_sdl2.c  memory_win.c  omega.c  omega_raylib.c  (+20 more)
(+5 files in other folders)
